Restructured package. Included contributors in LICENSE and AUTHORS files. Updated README, also including significant references. Re-implemented and fixed 1D & 2D continuous feature ALE plot calculations. Used setuptools-scm to set and update the package version based on git tags. Black (and isort) formatting. Also sorted requirements.txt alphabetically. Black and Apache 2.0 badge. Improved documentation, including doctests. Only Python versions >= 3.5 are supported now. Added setup.cfg and used it to configure pytest as well.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,3 @@
-Maxime Jumelle - maxime@blent.ai
+Maxime Jumelle - maxime@blent.ai - (gh: @MaximeJumelle)
+Sanjif Rajaratnam (gh: @sanjifr3)
+Alexander Kuhn-Regnier (gh: @akuhnregnier)
