--- a/examples/regression_iris.ipynb
+++ b/examples/regression_iris.ipynb
@@ -2,150 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "from loguru import logger\n",
     "from sklearn import datasets\n",
     "from sklearn.ensemble import RandomForestRegressor"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sepal length (cm)</th>\n",
-       "      <th>sepal width (cm)</th>\n",
-       "      <th>petal length (cm)</th>\n",
-       "      <th>petal width (cm)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5.1</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>4.9</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4.7</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>0.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4.6</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>0.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>3.6</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)\n",
-       "0                5.1               3.5                1.4               0.2\n",
-       "1                4.9               3.0                1.4               0.2\n",
-       "2                4.7               3.2                1.3               0.2\n",
-       "3                4.6               3.1                1.5               0.2\n",
-       "4                5.0               3.6                1.4               0.2"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "iris = datasets.load_iris()\n",
-    "dataset = pd.DataFrame(data=iris['data'], columns=iris['feature_names'])\n",
-    "dataset.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X = dataset.iloc[:, 1:]\n",
-    "Y = dataset.iloc[:, 0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.7/site-packages/sklearn/ensemble/forest.py:248: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n",
-      "  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "RandomForestRegressor(bootstrap=True, criterion='mse', max_depth=None,\n",
-       "           max_features='auto', max_leaf_nodes=None,\n",
-       "           min_impurity_decrease=0.0, min_impurity_split=None,\n",
-       "           min_samples_leaf=1, min_samples_split=2,\n",
-       "           min_weight_fraction_leaf=0.0, n_estimators=10, n_jobs=None,\n",
-       "           oob_score=False, random_state=None, verbose=0, warm_start=False)"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model = RandomForestRegressor(n_estimators=20, bootstrap=True)\n",
-    "model.fit(X, Y)"
+    "## Loading the Dataset\n",
+    "\n",
+    "Define our response `y` and predictor, `X`, variables."
    ]
   },
   {
@@ -153,7 +27,88 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "iris = datasets.load_iris()\n",
+    "dataset = pd.DataFrame(data=iris[\"data\"], columns=iris[\"feature_names\"])\n",
+    "X = dataset.iloc[:, 1:]\n",
+    "y = dataset.iloc[:, 0]\n",
+    "dataset.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fit a Random Forest Regressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = RandomForestRegressor(n_estimators=20, bootstrap=True)\n",
+    "model.fit(X, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create our ALE Plots\n",
+    "\n",
+    "### 1D Main Effect ALE Plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib as mpl\n",
+    "\n",
+    "from alepython import ale_plot\n",
+    "\n",
+    "mpl.rc(\"figure\", figsize=(9, 6))\n",
+    "ale_plot(\n",
+    "    model,\n",
+    "    X,\n",
+    "    X.columns[:1],\n",
+    "    bins=20,\n",
+    "    monte_carlo=True,\n",
+    "    monte_carlo_rep=100,\n",
+    "    monte_carlo_ratio=0.6,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2D Second-Order ALE Plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mpl.rc(\"figure\", figsize=(9, 6))\n",
+    "ale_plot(model, X, X.columns[:2], bins=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mpl.rc(\"figure\", figsize=(9, 6))\n",
+    "ale_plot(model, X, X.columns[1:], bins=10)"
+   ]
   }
  ],
  "metadata": {
@@ -161,49 +116,8 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.1"
-  },
-  "varInspector": {
-   "cols": {
-    "lenName": 16,
-    "lenType": 16,
-    "lenVar": 40
-   },
-   "kernels_config": {
-    "python": {
-     "delete_cmd_postfix": "",
-     "delete_cmd_prefix": "del ",
-     "library": "var_list.py",
-     "varRefreshCmd": "print(var_dic_list())"
-    },
-    "r": {
-     "delete_cmd_postfix": ") ",
-     "delete_cmd_prefix": "rm(",
-     "library": "var_list.r",
-     "varRefreshCmd": "cat(var_dic_list()) "
-    }
-   },
-   "types_to_exclude": [
-    "module",
-    "function",
-    "builtin_function_or_method",
-    "instance",
-    "_Feature"
-   ],
-   "window_display": false
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
